@@ -57,6 +57,11 @@ directory 'distdir', 'autodist.conf' configuration file and the
 default distribution 'default', then exits.
 .PP
 .TP
+\fB\-p\fR, \fB\-\-process\fR \fB<src>\fR \fB<dst>\fR
+Process file <src> into <dst> for distribution, only non-source files can 
+be processed with -p.
+.PP
+.TP
 \fB\-m\fR, \fB\-\-makedist\fR
 Creates and packages distribution
 .PP
